# controllers/contacts.js
@@ -1,100 +1,0 @@
-const mongodb = require('../data/database');
-const ObjectId = require('mongodb').ObjectId;
-
-const getAllContacts = async (req, res) => {
-    // #swagger.tags = ['Contacts']
-    const result = await mongodb.getDatabase().db().collection('contacts').find();
-    result.toArray((err, lists) => {
-        if (err) {
-            res.status(500).json({ message: err.message || 'Some error occurred while retrieving contacts.' });
-        }
-    }).then((contacts) => {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(contacts);
-    });
-};
-
-const getContactById = async (req, res) => {
-    // #swagger.tags = ['Contacts']
-    if (!ObjectId.isValid(req.params.id)) {
-        return res.status(400).json({ message: 'Invalid contact ID.' });
-    }
-    const contactId = new ObjectId(req.params.id);
-    const result = await mongodb.getDatabase().db().collection('contacts').find({ _id: contactId });
-    result.toArray().then((contacts) => {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(contacts);
-    });
-};
-
-const createContact = async (req, res) => {
-    // #swagger.tags = ['Contacts']
-    if (!req.body) {
-        return res.status(400).json({ message: 'Request body is required.' });
-    }
-
-    const newContact = {
-        firstName: req.body.firstName,
-        lastName: req.body.lastName,
-        email: req.body.email,
-        favoriteColor: req.body.favoriteColor,
-        birthday: req.body.birthday
-    };
-    const response = await mongodb.getDatabase().db().collection('contacts').insertOne(newContact);
-    res.setHeader('Content-Type', 'application/json');
-    if (response.acknowledged) {
-        res.status(201).json(newContact);
-    } else {
-        res.status(500).json(response.error || 'Some error occurred while adding the user.');
-    }
-};
-
-const updateContact = async (req, res) => {
-    // #swagger.tags = ['Contacts']
-    if (!ObjectId.isValid(req.params.id)) {
-        return res.status(400).json({ message: 'Invalid contact ID.' });
-    }
-    const contactId = new ObjectId(req.params.id);
-    if (!req.body) {
-        return res.status(400).json({ message: 'Request body is required.' });
-    }
-
-    const updatedContact = {
-        firstName: req.body.firstName,
-        lastName: req.body.lastName,
-        email: req.body.email,
-        favoriteColor: req.body.favoriteColor,
-        birthday: req.body.birthday,
-    };
-    const response = await mongodb.getDatabase().db().collection('contacts').replaceOne({ _id: contactId }, updatedContact);
-    res.setHeader('Content-Type', 'application/json');
-    if (response.modifiedCount > 0) {
-        res.status(200).json(updatedContact);
-    } else {
-        res.status(500).json(response.error || 'Some error occurred while updating the user.');
-    }
-};
-
-const deleteContact = async (req, res) => {
-    // #swagger.tags = ['Contacts']
-    if (!ObjectId.isValid(req.params.id)) {
-        return res.status(400).json({ message: 'Invalid contact ID.' });
-    }
-    const contactId = new ObjectId(req.params.id);
-    const response = await mongodb.getDatabase().db().collection('contacts').deleteOne({ _id: contactId });
-    res.setHeader('Content-Type', 'application/json');
-    if (response.deletedCount > 0) {
-        res.status(200).json({ message: 'Contact deleted successfully.' });
-    } else {
-        res.status(500).json(response.error || 'Some error occurred while deleting the user.');
-    }
-};
-
-
-module.exports = {
-    getAllContacts,
-    getContactById,
-    createContact,
-    updateContact,
-    deleteContact
-};
