# swagger-output.json
@@ -1,13 +1,14 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Contacts API",
-    "description": "API for managing contacts",
+    "title": "DnD Characters API",
+    "description": "API for managing DnD Characters",
     "version": "1.0.0"
   },
-  "host": "contacts-project-mpcu.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
+    "http",
     "https"
   ],
   "paths": {
@@ -34,10 +35,10 @@
         }
       }
     },
-    "/contacts/": {
+    "/characters/": {
       "get": {
         "tags": [
-          "Contacts"
+          "Characters"
         ],
         "description": "",
         "produces": [
@@ -46,12 +47,15 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
         "tags": [
-          "Contacts"
+          "Characters"
         ],
         "description": "",
         "produces": [
@@ -61,31 +65,332 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
+                "charName": {
+                  "type": "string",
+                  "example": "Arannis"
                 },
-                "lastName": {
-                  "example": "any"
+                "charRace": {
+                  "type": "string",
+                  "example": "Elf"
                 },
-                "email": {
-                  "example": "any"
+                "charClass": {
+                  "type": "string",
+                  "example": "Ranger"
                 },
-                "favoriteColor": {
-                  "example": "any"
+                "charLevel": {
+                  "type": "number",
+                  "example": 5
                 },
-                "birthday": {
-                  "example": "any"
+                "charAlignment": {
+                  "type": "string",
+                  "example": "Neutral Good"
+                },
+                "charBackground": {
+                  "type": "string",
+                  "example": "Outlander"
+                },
+                "charAge": {
+                  "type": "number",
+                  "example": 120
+                },
+                "charHeight": {
+                  "type": "number",
+                  "example": 72
+                },
+                "charWeight": {
+                  "type": "number",
+                  "example": 160
+                },
+                "charEyes": {
+                  "type": "string",
+                  "example": "Green"
+                },
+                "charSkin": {
+                  "type": "string",
+                  "example": "Fair"
+                },
+                "charBonds": {
+                  "type": "string",
+                  "example": "Protect my homeland"
+                },
+                "charFlaws": {
+                  "type": "string",
+                  "example": "Too trusting"
+                },
+                "charIdeals": {
+                  "type": "string",
+                  "example": "Freedom"
+                },
+                "charPersonalityTraits": {
+                  "type": "string",
+                  "example": "Calm under pressure"
+                },
+                "hp": {
+                  "type": "number",
+                  "example": 42
+                },
+                "ac": {
+                  "type": "number",
+                  "example": 16
+                },
+                "str": {
+                  "type": "number",
+                  "example": 14
+                },
+                "dex": {
+                  "type": "number",
+                  "example": 17
+                },
+                "con": {
+                  "type": "number",
+                  "example": 13
+                },
+                "int": {
+                  "type": "number",
+                  "example": 12
+                },
+                "wis": {
+                  "type": "number",
+                  "example": 15
+                },
+                "cha": {
+                  "type": "number",
+                  "example": 10
                 }
-              }
+              },
+              "required": [
+                "charName",
+                "charRace",
+                "charClass",
+                "charLevel",
+                "charAlignment",
+                "charBackground",
+                "hp",
+                "ac",
+                "str",
+                "dex",
+                "con",
+                "int",
+                "wis",
+                "cha"
+              ]
             }
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/characters/{id}": {
+      "get": {
+        "tags": [
+          "Characters"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Characters"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "charName": {
+                  "type": "string",
+                  "example": "Arannis"
+                },
+                "charRace": {
+                  "type": "string",
+                  "example": "Elf"
+                },
+                "charClass": {
+                  "type": "string",
+                  "example": "Ranger"
+                },
+                "charLevel": {
+                  "type": "number",
+                  "example": 5
+                },
+                "charAlignment": {
+                  "type": "string",
+                  "example": "Neutral Good"
+                },
+                "charBackground": {
+                  "type": "string",
+                  "example": "Outlander"
+                },
+                "charAge": {
+                  "type": "number",
+                  "example": 120
+                },
+                "charHeight": {
+                  "type": "number",
+                  "example": 72
+                },
+                "charWeight": {
+                  "type": "number",
+                  "example": 160
+                },
+                "charEyes": {
+                  "type": "string",
+                  "example": "Green"
+                },
+                "charSkin": {
+                  "type": "string",
+                  "example": "Fair"
+                },
+                "charBonds": {
+                  "type": "string",
+                  "example": "Protect my homeland"
+                },
+                "charFlaws": {
+                  "type": "string",
+                  "example": "Too trusting"
+                },
+                "charIdeals": {
+                  "type": "string",
+                  "example": "Freedom"
+                },
+                "charPersonalityTraits": {
+                  "type": "string",
+                  "example": "Calm under pressure"
+                },
+                "hp": {
+                  "type": "number",
+                  "example": 42
+                },
+                "ac": {
+                  "type": "number",
+                  "example": 16
+                },
+                "str": {
+                  "type": "number",
+                  "example": 14
+                },
+                "dex": {
+                  "type": "number",
+                  "example": 17
+                },
+                "con": {
+                  "type": "number",
+                  "example": 13
+                },
+                "int": {
+                  "type": "number",
+                  "example": 12
+                },
+                "wis": {
+                  "type": "number",
+                  "example": 15
+                },
+                "cha": {
+                  "type": "number",
+                  "example": 10
+                }
+              },
+              "required": [
+                "charName",
+                "charRace",
+                "charClass",
+                "charLevel",
+                "charAlignment",
+                "charBackground",
+                "hp",
+                "ac",
+                "str",
+                "dex",
+                "con",
+                "int",
+                "wis",
+                "cha"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Characters"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -96,10 +401,86 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/users/": {
       "get": {
         "tags": [
-          "Contacts"
+          "Users"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "Drew"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Jezek"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "drew@example.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "StrongPassword123"
+                }
+              },
+              "required": [
+                "firstName",
+                "lastName",
+                "email",
+                "password"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "tags": [
+          "Users"
         ],
         "description": "",
         "produces": [
@@ -116,12 +497,15 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
       "put": {
         "tags": [
-          "Contacts"
+          "Users"
         ],
         "description": "",
         "produces": [
@@ -137,34 +521,45 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "firstName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Drew"
                 },
                 "lastName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Jezek"
                 },
                 "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "drew@example.com"
                 },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
+                "password": {
+                  "type": "string",
+                  "example": "StrongPassword123"
                 }
-              }
+              },
+              "required": [
+                "firstName",
+                "lastName",
+                "email",
+                "password"
+              ]
             }
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -173,7 +568,7 @@
       },
       "delete": {
         "tags": [
-          "Contacts"
+          "Users"
         ],
         "description": "",
         "produces": [
@@ -188,8 +583,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
